--- a/src/lab/web.config
+++ b/src/lab/web.config
@@ -2,8 +2,9 @@
 <configuration>
 	<appSettings/>
 	<connectionStrings>
-		<!--<add name="virtualabConnectionString" connectionString="Data Source=USER-PC;Initial Catalog=virtualab;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
+		<!--<add name="virtualabConnectionString" connectionString="Data Source=ADMIN-PC;Initial Catalog=virtualab;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
     <add name="virtualabConnectionString" connectionString="Data Source=USIC-SERVER;Initial Catalog=virtualab;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+  
 	</connectionStrings>
 	<system.web>
 		<!-- 
